test both models on same data

--- a/GCN_train_model.ipynb
+++ b/GCN_train_model.ipynb
@@ -10,12 +10,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-12 11:26:39.992580: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-12 11:26:39.992643: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-12 11:26:39.994515: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-12 11:26:40.006709: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-02-12 17:36:41.942680: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-12 17:36:41.942736: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-12 17:36:41.944447: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-12 17:36:41.956210: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-12 11:26:41.160311: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-02-12 17:36:43.142092: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -35,12 +35,44 @@
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "\n",
-    "from gcn_toolkit import gcn_model"
+    "from gcn_toolkit import gcn_model\n",
+    "from gcn_toolkit import fcn_model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "92eb55d5-0041-4342-98cb-0c003364b467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.Tensor([[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c283e1b4-cb37-47ef-8844-d2c2a54218fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.flatten(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "edb4bfc3-9c3c-4b6f-b77b-7c08fcceabe1",
    "metadata": {},
    "outputs": [
@@ -52,7 +84,7 @@
       "Cuda available:  True \n",
       "Cuda device count:  2 \n",
       "current device:  0 \n",
-      "device info:  <torch.cuda.device object at 0x2aefd2b73d90> \n",
+      "device info:  <torch.cuda.device object at 0x2adafbfc8bb0> \n",
       "device name:  Tesla P100-SXM2-16GB\n"
      ]
     }
@@ -70,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6b183073-a664-48aa-8da5-164e372d7f29",
    "metadata": {},
    "outputs": [
@@ -87,14 +119,14 @@
     "\n",
     "graph_data = torch.load('/beegfs/desy/group/unihh2/cms-llp/run3/v10/ggH_HToSSTobbbb_MH-125_MS-15_CTau1000_13p6TeV/graphs/graphs9k8nn_' + str(1) + '.pt')\n",
     "\n",
-    "batch_size = 256\n",
+    "batch_size = 1\n",
     "\n",
     "train_graphs = graph_data[:6000]\n",
     "val_graphs = graph_data[6000:8000]\n",
     "test_graphs = graph_data[8000:]\n",
     "\n",
-    "train_loader = DataLoader(train_graphs, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = DataLoader(val_graphs, batch_size=batch_size, shuffle=True)\n",
+    "train_loader = DataLoader(train_graphs, batch_size=batch_size, shuffle=False)\n",
+    "val_loader = DataLoader(val_graphs, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_graphs, batch_size=1, shuffle=False)\n",
     "\n",
     "train_loader_test = DataLoader(train_graphs, batch_size=1, shuffle=True)\n",
@@ -104,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "47d50cea-e301-4389-ad34-29527ab3e5a8",
    "metadata": {},
    "outputs": [
@@ -112,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataBatch(x=[91422, 9], edge_index=[2, 731376], y=[256], u=[7168], batch=[91422], ptr=[257])\n"
+      "DataBatch(x=[55, 9], edge_index=[2, 440], y=[1], u=[24], batch=[55], ptr=[2])\n"
      ]
     }
    ],
@@ -120,6 +152,140 @@
     "for batch in train_loader:\n",
     "    print(batch)\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "23f4f273-bd0d-4865-a1c7-c07baf1fdf07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fcn = fcn_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5ead59a0-39f0-4c62-8286-48df9aef3119",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FCN(\n",
+      "  (fc_layers): ModuleList(\n",
+      "    (0): Linear(in_features=24, out_features=50, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=50, out_features=30, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=30, out_features=20, bias=True)\n",
+      "    (5): ReLU()\n",
+      "    (6): Linear(in_features=20, out_features=5, bias=True)\n",
+      "    (7): ReLU()\n",
+      "    (8): Linear(in_features=5, out_features=1, bias=True)\n",
+      "    (9): ReLU()\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "fcn.make_model(inputs = 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "af02986f-34ba-4018-b777-f094a27e9fd8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 001, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 002, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 003, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 004, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 005, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 006, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 007, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 008, Train Loss: 34217.0625, Test Loss: 35096.4648\n",
+      "tensor([-1.3881e+02,  6.3269e+02, -8.4082e+02,  5.1147e+00,  6.5854e+00,\n",
+      "         5.5000e+01,  5.5000e+01,  2.2584e+01,  3.1850e+01,  1.3738e-01,\n",
+      "         1.3890e+01,  3.2774e+01,  1.1482e-02,  4.0626e-02,  3.2724e-02,\n",
+      "         5.2166e-02,  4.0976e-02,  3.2285e-02, -2.6505e+00, -1.4029e+01,\n",
+      "         6.0668e-02, -1.0588e+00, -1.4606e+00, -1.4705e+00])\n",
+      "tensor([0.], grad_fn=<ViewBackward0>) tensor([108.2869])\n",
+      "Epoch: 009, Train Loss: 34217.0625, Test Loss: 35096.4648\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training Loop FCN\n",
+    "\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
+    "\n",
+    "for epoch in range(1, 10):\n",
+    "    fcn.train(train_loader)\n",
+    "    train_loss = fcn.test(train_loader)\n",
+    "    val_loss = fcn.test(val_loader)\n",
+    "    train_losses.append(train_loss.item())\n",
+    "    val_losses.append(val_loss.item())\n",
+    "    print(f'Epoch: {epoch:03d}, Train Loss: {train_loss:.4f}, Test Loss: {val_loss:.4f}')"
    ]
   },
   {
@@ -157,6 +323,26 @@
    ],
    "source": [
     "tool.make_model(hidden_channels = 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d81ae6b2-06d5-4988-87a1-efaa506bdd7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataBatch(x=[93247, 9], edge_index=[2, 745976], y=[256], u=[7168], batch=[93247], ptr=[257])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in train_loader:\n",
+    "    print(batch)\n",
+    "    break"
    ]
   },
   {
@@ -274,7 +460,7 @@
     }
    ],
    "source": [
-    "# Training Loop\n",
+    "# Training Loop GCN\n",
     "\n",
     "train_losses = []\n",
     "val_losses = []\n",
