--- a/convert_dataset.ipynb
+++ b/convert_dataset.ipynb
@@ -493,13 +493,7 @@
       "Processing event n.  289000\n",
       "Processing event n.  290000\n",
       "Processing event n.  291000\n",
-      "Processing event n.  292000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing event n.  292000\n",
       "Processing event n.  293000\n",
       "Processing event n.  294000\n",
       "Processing event n.  295000\n",
@@ -897,9 +891,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mds_regression",
+   "display_name": "mds_regression_pyg",
    "language": "python",
-   "name": "mds_regression"
+   "name": "mds_regression_pyg"
   },
   "language_info": {
    "codemirror_mode": {
@@ -911,9 +905,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
